zeit.brightcove changes
=======================


0.7.1 (unreleased)
------------------

- new layout for video-form 


0.7.0 (2010-08-09)
------------------

- Fix tests after changes in zeit.cms (#7549)
- changes some default values  
- Knopf für "Speichern und zur Suche" (#7827)

0.6.1 (2010-07-15)
------------------

- Fix brightove SOLR updater so it implements IUpdater correctly. Otherwise
  re-indexing videos doesn't work correctly.


0.6.0 (2010-07-12)
------------------

- Since brightcove caches absolute URLs better, we use the same timestamp for
  a request more often
- Use proper preview URL for brightcove content (#7030).
- Adapted last_semantic_change from date_last_modified
- Use an empty string instead of null in REST calls for brightcove does not
  recognize null
- Update brightcove videos if video_still is updated. Even though the
  modified_date is not updated, this might happen in upstream.  
- Add image-tag to video XML reference (#7625)
- Add type="video" attribute to video XML reference (#7625)


0.5.0 (2010-06-09)
------------------

- Added solr indexes for banner and banner-id (#7382).
- Update videos "latest modified first" (#7209).
- Add uniqueId to asset references (#7381).


0.4.1 (2010-06-03)
------------------

- Handle missing expire dates when writing asset references.
- Add id_prefix to the interface so it gets security clearance.


0.4.0 (2010-06-02)
------------------

- Add a solr index 'h264_url' that contains the 'flv_url' of the video (#7362).
- Change update-repository to be long-running instead of one-shot (#7339).
- Provide an adapter to ITimeBasedPublishing, so videos get an expires
  attribute when included in a centerpage (#7335).
- Allow both videos and playlists as assets (#7195).
- Prefix the IDs of video/playlist assets in XML (vid123/pls987) (#7194).
- Add expires attribute to asset XML-references (#7380).


0.3.2 (2010-05-06)
------------------
