@@ -118,7 +118,7 @@ class IVideo(IBrightcoveContent,
         description=_(
             "Should this article be listed in the daily newsletter?"),
         default=False)
-    
+
     allow_comments = zope.schema.Bool(
         title=_("comments allowed"),
         description=_(
